--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,19 @@ services:
          - '${API_PORT}:${API_PORT}'
       volumes:
          - .:/usr/src/app
-         - /usr/src/app/node_modules
       environment:
          - NODE_ENV=development
          - PORT=${API_PORT}
          - MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/campuswap?authSource=admin
+      env_file:
+         - .env   
       depends_on:
          - mongo
       command: npm run start:dev
 
    mongo:
-      image: mongo:6
+      image: mongo:8
       container_name: mongo
-      restart: always
       environment:
          - MONGO_INITDB_DATABASE=campuswap
          - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
