--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
          - PORT=${API_PORT}
          - MONGO_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/campuswap?authSource=admin
       env_file:
-         - variable_dev.env   
+         - .env
       depends_on:
-         - mongo
+         mongo:
+          condition: service_healthy
       command: npm run start:dev
 
    mongo:
@@ -29,6 +30,12 @@ services:
          - '${MONGO_PORT}:27017'
       volumes:
          - mongo_data:/data/db
+      healthcheck:
+        test: [ "CMD-SHELL", "mongosh --eval 'db.adminCommand(\"ping\")' || exit 1" ]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+        start_period: 10s
 
 volumes:
    mongo_data:
