--- a/CampuSwap/package.json
+++ b/CampuSwap/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@nozbe/watermelondb": "^0.28.0",
+    "@nozbe/watermelondb": "^0.25.5",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
@@ -35,15 +36,18 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
