--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-ENV HUSKY=0
+ENV HUSKY_SKIP_INSTALL=1
 RUN npm install
 
 COPY . .
@@ -17,7 +17,7 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-ENV HUSKY=0
+ENV HUSKY_SKIP_INSTALL=1
 RUN npm install --production
 
 COPY --from=builder /usr/src/app/dist ./dist
