--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
-    "husky": "^9.1.6",
+    "husky": "...",
     "jest": "^30.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.2",
