--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,10 +32,10 @@ jobs:                                                   # Début de la section d
 
       - name: Build backend Docker image                # Étape 3 : Construction de l’image Docker du backend NestJS
         run: |                                          # Exécute plusieurs commandes shell
-          docker build -f Dockerfile.dev .       
-            -t $REGISTRY/${{ secrets.GIT_USER }}/$IMAGE_NAME:latest \   
-            -t $REGISTRY/${{ secrets.GIT_USER }}/$IMAGE_NAME:${{ github.sha }} \ 
-
+          docker build -f Dockerfile.dev \
+            -t $REGISTRY/${{ secrets.GIT_USER }}/$IMAGE_NAME:latest \
+            -t $REGISTRY/${{ secrets.GIT_USER }}/$IMAGE_NAME:${{ github.sha }} \
+            .
       - name: Push backend image to GHCR                # Étape 4 : Envoi de l’image Docker vers GHCR
         run: |                                          # Deux push : version latest et version commit
           docker push $REGISTRY/${{ secrets.GIT_USER }}/$IMAGE_NAME:latest
