--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,8 +29,7 @@ jobs:
 
       - name: Auth Expo
         run: |
-          eas whoami || eas login --token ${{ secrets.EXPO_TOKEN }} --non-interactive
-      
+          eas whoami || eas login --non-interactive --token ${{ secrets.EXPO_TOKEN }}      
 
       - name: Publish OTA
         run: eas update --auto
