--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,8 @@ jobs:
 
       - name: Auth Expo
         run: |
-          eas whoami || eas login --non-interactive --token ${{ secrets.EXPO_TOKEN }}      
+          export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
+          eas whoami      
 
       - name: Publish OTA
-        run: eas update --auto
+        run: eas update --auto --non-interactive
