--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+      CI: true
 
     steps:
       - uses: actions/checkout@v3
@@ -28,11 +31,7 @@ jobs:
         run: npm install
 
       - name: Auth Expo
-        run: |
-          export EXPO_TOKEN=${{ secrets.EXPO_TOKEN }}
-          eas whoami      
+        run: eas whoami
 
       - name: Publish OTA
-        run: eas update --auto --non-interactive
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+        run: eas update --auto --platform android
