--- a/app.config.json
+++ b/app.config.json
@@ -8,6 +8,7 @@
     "scheme": "campuswap",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "platforms": ["ios", "android"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.CampuSwap"
