Correction MAJ APP Mobile

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,4 +34,4 @@ jobs:
         run: eas whoami
 
       - name: Publish OTA
-        run:  eas update --channel preview
+        run:  eas update --channel preview --message "MAJ Mineur"
